--- a/public/index.html
+++ b/public/index.html
@@ -351,7 +351,7 @@ input {
   <p class="text-left">Sign in</p>
   <p class="text-left">Have an account already?</p>
   <!-- Add a simpler button: Simple button that will open the modal.-->
-  <div class="btn btn-outline-primary on-top-modal-body" data-netlify-identity-button></div>
+  <div class="btn btn-outline-primary on-top-modal-body " data-netlify-identity-button></div>
 
 <hr>
   <p class="text-left">New to Grynn.com?</p>
@@ -669,7 +669,6 @@ $('.show-cart').on("click", ".plus-item", function (event) {
   shoppingCart.addItemToCart(name);
   displayCart();
 });
-
 
 
 // Item count input
@@ -1973,14 +1972,28 @@ function logoutNetlifyIdentity(user) {
 
 
 
+var statusNetlify = false;
+
 function netlifyIdentityWidgetopened() {
-  $('#cart').modal('hide');
+
+  statusNetlify = $('#cart').is(':visible');
+
+  if (statusNetlify){
+    $('#cart').modal('hide');
+  }
+
 }
 
 
 
 function netlifyIdentityWidgetclosed() {
-  $('#cart').modal('show');
+
+  if (statusNetlify){
+    $('#cart').modal('show');
+    statusNetlify = false;
+  }
+
+  
 }
 
 
@@ -1994,7 +2007,7 @@ try {
 
 
 
-  netlifyIdentity.open();
+  // netlifyIdentity.open();
 
 
   // Get the current user:
@@ -2021,7 +2034,7 @@ try {
 
 
   // Close the modal
-  netlifyIdentity.close();
+  // netlifyIdentity.close();
 
 
 
