--- a/public/index.html
+++ b/public/index.html
@@ -1539,7 +1539,8 @@ function save_address(){
      document.getElementById("ship-address").value = document.getElementById("bill-address").value;
      document.getElementById("ship-address2").value = document.getElementById("bill-address2").value;
      document.getElementById("ship-city").value = document.getElementById("bill-city").value;
-     document.getElementById("ship-postcode").value = document.getElementById("bill-postcode").value;     
+     document.getElementById("ship-postcode").value = document.getElementById("bill-postcode").value; 
+     document.getElementById("ship-country").value = document.getElementById("bill-country").value;     
   }
 
 
